elements/pfe-jump-links/src/pfe-jump-links-nav.scss
// Please see the pfe-sass README for guidance on using these tools
@import "../../pfe-sass/pfe-sass";


$LOCAL: jump;

$variables: (
  // Padding: calc(#{pfe-var(container-spacer)} * 2),
  // BackgroundColor: pfe-color(surface--base),
);

:host {
  // Disable accordion's active borders
  --pfe-accordion--BackgroundColor: transparent;
  --pfe-accordion--BorderColor: #ccc;
  --pfe-accordion--BorderColor--accent: transparent;
  --pfe-accordion--accent: transparent;
  --pfe-theme--color--surface--border: transparent;
  --pfe-theme--color--ui-base--on-dark: transparent;
  --pfe-theme--color--ui-base: transparent;
  button{
    text-decoration: none;
  }
  font-weight: #{pfe-var(font-weight--normal)};
  display: block;
  position: sticky;
  top: calc(#{pfe-var(container-spacer)} * 4);
  @media(min-width: 992px) {
    padding: calc(#{pfe-var(container-spacer)} * 2);
  }
}

::slotted([slot="heading"]) {
  margin: 0;
  margin-bottom: calc(#{pfe-var(container-spacer)} * 1);
  font-size: #{pfe-var(font-size--heading--zeta)};
  font-weight: #{pfe-var(font-weight--normal)};
  text-transform: uppercase;
  @media(max-width: 992px) {
    display: none;
  }
}

ul{
  &.pfe-jump-links-nav {
    &[horizontal] {

    }
    padding: calc(#{pfe-var(container-spacer)} * 1);
    padding-left: 0;
    margin: 0;
    list-style: none;
  }
  &.sub-nav {
    margin: 0;
    padding: 0;
    overflow-y: hidden;
    transition: flex 1s linear;
    display: flex;
    flex-direction: column;
    flex: 0;
  }
}

li {
  border-left: 3px solid transparent;
  display: block;
  text-decoration: none;
}

li.expand {
  ul.sub-nav {
    flex: 1;
  }
  a.sub-section {
    display: table;
    height: auto;
  }
}

a {
  display: table;
  text-decoration: none;
  font-size: #{pfe-var(font-size)};
  padding: calc(#{pfe-var(container-spacer)} / 2);
  line-height: #{pfe-var(line-height)};
  border-left: 3px solid transparent;
  position: relative;
  &.sub-section{
    @media(min-width: 992px) {
      display: none;
    }
    margin-left: calc(#{pfe-var(container-spacer)} * 0.75);
    font-size: 14px;
  }
  &::after {
    content: "";
    position: absolute;
    width: calc(100% - 4px);
    height: calc(100% - 4px);
    top: 0;
    left: 0;
  }
  &:focus {
    outline: none;

    &::after {
      border-radius: 3px;
      border: 2px solid #{pfe-color(link)};
    }
  }
}

:host([default]) {
  @media(max-width: 992px){
    pfe-accordion {
      border: 1px solid #{pfe-color(ui-disabled)};
    }
    pfe-accordion-header {
      background-color: white;
    }
  }
  
  border: 1px solid transparent;
  ::slotted([slot="heading"]) {
    color: #{pfe-color(surface--darkest)};
  } 
  ul.pfe-jump-links-nav {
    border-left: #{pfe-var(surface--border-width)} #{pfe-var(surface--border-style)} #{pfe-color(ui-disabled)};
  }

  li{
    &[active] {
      border-left: 3px solid #{pfe-color(link)};
    }
  }

  a {
    color: #{pfe-color(ui-disabled--text)};
    position: relative;

    &:hover {
      color: #{pfe-color(surface--darkest)};
    }
    &[active] {
      color: #{pfe-color(surface--darkest)};
    }
    &::after {
      content: "";
      position: absolute;
      width: calc(100% - 4px);
      height: calc(100% - 4px);
      top: 0;
      left: 0;
    }

    &:focus {
      outline: none;

      &::after {
        border-radius: 3px;
        border: 2px solid #{pfe-color(link--on-dark)}
      }
    }
  }
}

:host([pfe-color="darkest"]) {
  --theme: dark;
  pfe-accordion-header,
  pfe-accordion-panel,
  button[aria-expanded=true] {
    --pfe-accordion--BackgroundColor: #{pfe-color(surface--darkest)};
    background-color: #{pfe-color(surface--darkest)};
  }
  pfe-accordion-header>h3>button[aria-expanded=true]{
    background-color: black !important;
    --pfe-accordion--BackgroundColor: #131313 !important;
    --pfe-accordion--BackgroundColor: #{pfe-color(surface--darkest)};
  }
  ::slotted([slot="heading"]) {
    color: #{pfe-color(surface--lighter)};
  }
  background-color: #{pfe-color(surface--darkest)};
  border: 1px solid #{pfe-color(ui-disabled--text)};
  ul.pfe-jump-links-nav {
    border-left: 1px solid #{pfe-color(ui-disabled--text)};
  }
  li{
    &[active] {
      border-left: 3px #{pfe-var(surface--border-style)} #{pfe-color(ui-accent)};
    }
  }

a {
     color:   #{pfe-color(ui-complement--focus--on-dark)};
     &:hover {
        color: #{pfe-color(ui-complement--hover--on-dark)};
     }
     &[active] {
       color: #{pfe-color(ui-complement--on-dark)};
     }

    &::after {
      content: "";
      position: absolute;
      width: calc(100% - 4px);
      height: calc(100% - 4px);
      top: 0;
      left: 0;
    }

    &:focus {
      outline: none;

      &::after {
        border-radius: 3px;
        border: 2px solid #{pfe-color(link--on-dark)};
      }
    }
  }
}

:host([hidden]) {
  display: none;
}

:host([horizontal]) {
  
  nav {
    background-color: pfe-color(surface--lighter);
    display: flex;
    position: relative;
    ::slotted([slot="heading"]) {
      display: none;
    }

    ::slotted([slot="logo"]) {
      position: absolute;
      left: 0;
      max-height: calc(#{pfe-var(container-spacer)} * 3.5);
      max-width: calc(#{pfe-var(container-spacer)} * 14);
      top: calc(#{pfe-var(container-spacer)} * 1);
      @media(max-width: 992px) {
        left: calc(#{pfe-var(container-spacer)} * 2);
      }
      @media(min-width: 992px) {
        left: calc(#{pfe-var(container-spacer)} * 4);
      }
    }

    ::slotted([slot="link"]) {
      position: absolute;
      @media(max-width: 992px) {
        right: calc(#{pfe-var(container-spacer)} * 2);
      }
      @media(min-width: 992px) {
        right: calc(#{pfe-var(container-spacer)} * 4);
      }
      top: calc(#{pfe-var(container-spacer)} * 1);
    }
  }

  padding: 0;
  .heading {
    display: none;
  }
  top: 0;
  width: 100%;
  
  
  #container {
    flex: 1;
    display: flex;
    justify-items: center;
    flex-direction: column;
  }

  ul {
    display:block;
    text-align: center;
    flex: 1;
    display: flex;
    padding: 0;
    width: auto;
    margin-left: auto;
    margin-right: auto;
    li {
      padding: 0 calc(#{pfe-var(container-spacer)} * 1.5);
      display: flex;
      height: calc(#{pfe-var(container-spacer)} * 5);
      align-items: center;
      border-top: 4px solid transparent;
      border-bottom: 4px solid transparent;
      border-left: none;
      border-right: none;
      &[active] {
        border-top: 4px solid #{pfe-color(ui-accent)};
      }
    }
  }

  a {
    color: #{pfe-color(ui-disabled--text)};
    &[active] {
      color: #{pfe-color(surface--darkest)};
    }
  }
  @media(max-width: 768px) {
    nav {
      min-height: calc(#{pfe-var(container-spacer)} * 5.5);
      background-color: #{pfe-color(surface--lighter)}
    }
    .pfe-jump-links-nav {
      display: none;
    }
  }
}

.sticky {
  position: sticky;
  top: 0;
}
pfe-accordion-header {
  position: sticky;
  top: 0;
  // background-color: white !important;
}
@media(min-width: 992px) {
  /* normal styles */
  pfe-accordion-header {
    visibility: collapse !important;
    display: none;
  }
  pfe-accordion-panel {
    visibility: collapse;
    display: none;
    opacity: 1;
    display: block;
  }
  pfe-accordion-panel>pfe-jump-links-nav {
    width: 100%;
    display: block;
    visibility: visible;
  }
}
@media(max-width: 992px){
  /* Mobile styles */
}

nav {
  visibility: visible;
}

